modularise jdata-core