@@ -63,6 +63,20 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.6.0</version>
+        <configuration>
+          <argLine>
+            --enable-native-access=jdata.core,ALL-UNNAMED
+            --add-reads jdata.core=org.junit.jupiter.api
+            --add-opens jdata.core/io.github.shridey.jdata.core.column=org.junit.platform.commons,ALL-UNNAMED
+            --add-opens jdata.core/io.github.shridey.jdata.core.ffi=org.junit.platform.commons,ALL-UNNAMED
+            --add-opens jdata.core/io.github.shridey.jdata.core=org.junit.platform.commons,ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.12.0</version>
         <executions>
